🔧 Add check nickname api
